2009-03-17  baal  <baal@m-oz.com>

        * config.tmpl.sls : template for generate (spon config). used by install.sh.

2009-03-13  higepon  <higepon@users.sourceforge.jp>

        * tools.sls (spon): Use down-load-erro condition. Need refactoring.

2009-02-23  leque <dico.leque.comicron@gmail.com>

        * tools.sls: quiet external commands down when (quiet?) is #t.

        * tools.sls: do not verify package by default.

2009-02-22  higepon  <higepon@users.sourceforge.jp>

        * tools.sls (spon): Added &i/o-download.

        * spon.ss (main): (quiet? #t).

2009-02-18  higepon  <higepon@users.sourceforge.jp>

        * compat.mosh.sls (spon): Added (verbose) => #f support.

2009-02-17  higepon  <higepon@users.sourceforge.jp>

        * spon: Added spon command.
          Use like following.

          % sudo ./spon install base64

        * tools.sls (spon): Merged leque's code.

        * tools.ypsilon.sls: Added by fujita-y.

2009-02-14  higepon  <higepon@users.sourceforge.jp>

        * tools.mosh.sls (spon): Use (mosh process) instead of (system).

        * First import originally from baal's implementation.