@@ -1,16 +1,0 @@
-#!/bin/bash
-
-r6rs="`which mosh`"
-if test "" = "$r6rs"; then
-  r6rs="`which ypsilon`"
-  if test "" = "$r6rs"; then
-      echo "R6RS Scheme not found"
-  else
-      echo "TODO"
-  fi
-else
-    # TODO path to spon.ss
-    # TODO check $1
-    $r6rs --loadpath=/usr/local/share/ spon.ss $2
-fi
-
